--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-   "name":"APPNAME",
-   "description":"Nothing here yet",
+   "name":"hackery",
+   "description":"Hacking utilities",
    "version":"0.0.1",
-   "homepage":"http://github.com/wearefractal/APPNAME",
-   "repository":"git://github.com/wearefractal/APPNAME.git",
+   "homepage":"http://github.com/wearefractal/hackery",
+   "repository":"git://github.com/wearefractal/hackery.git",
    "author":"Fractal <contact@wearefractal.com> (http://wearefractal.com/)",
    "main":"./index.js",
    
    "dependencies":{
-      "coffee-script":"*"
+      "coffee-script":"*",
+      "request":"*",
+      "jsftp":"*",
+      "ping":"*",
+      "portscanner":"*",
+      "async":"*"
    },
    "devDependencies":{
-      "node-log":"*"
+      "should":"*",
+      "mocha":"*"
+   },
+   "scripts":{
+      "test":"mocha"
    },
    "engines":{
       "node":">= 0.4.0"
@@ -19,7 +28,7 @@
    "licenses":[
       {
          "type":"MIT",
-         "url":"http://github.com/wearefractal/APPNAME/raw/master/LICENSE"
+         "url":"http://github.com/wearefractal/hackery/raw/master/LICENSE"
       }
    ]
 }
